--- a/SmartHud/res/values/strings.xml
+++ b/SmartHud/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="chat_name"> "Steve \n  Hansen"</string> 
     <string name="chat_number"> "9787715233"</string>	
     
+    
+<!--    <string name="chat_name"> "Michael \n  Amaru"</string> -->
 <!--    <string name="chat_number"> "7817897980"</string> -->
+
 <!--	<string name="chat_number"> "6172337770"</string>	Scott K-->
     <string name="chat_text"> "Message from.."</string>
     <string name="chat_driving"> "I'm driving at the moment and will get back to you as soon as it's safe" </string>
