--- a/SmartHud/res/values/strings.xml
+++ b/SmartHud/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="track_list_play">"Come With Me Now, Tanya Maria"</string>
     <string name="track_list_bottom">"Tomorrow \nSelf Portrait "</string>
         
-    <string name="chat_name"> "Steve \n  Hansen"</string> 
+    <string name="chat_name"> "Michael \n  Amaru"</string> 
     <string name="chat_number"> "9787715233"</string>	
     
     
